--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "positronium.C": "cpp",
         "sumhisto.C": "cpp",
         "PCanvas.C": "cpp",
-        "gaussian_fit_ch.C": "cpp"
+        "gaussian_fit_ch.C": "cpp",
+        "FitGauss.C": "cpp"
     }
 }
