--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
         "trg_time_all.C": "cpp",
         "calibrate.C": "cpp",
         "gaussian_fit.C": "cpp",
-        "gaussian_fit_ch.C": "cpp"
+        "gaussian_fit_ch.C": "cpp",
+        "PCanvas.C": "cpp",
+        "fix_coinc.C": "cpp",
+        "gethisto.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
