--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,11 @@
         "fiilter.C": "cpp",
         "filter.C": "cpp",
         "subtract_bg.C": "cpp",
-        "arduino_preamp.C": "cpp"
+        "arduino_preamp.C": "cpp",
+        "calTAC.C": "cpp",
+        "linear_fit.C": "cpp",
+        "preamp_lin.C": "cpp",
+        "lin.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
