--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
         "rate.C": "cpp",
         "trg_time_diff.C": "cpp",
         "TacPlot.C": "cpp",
-        "filter3gamma.C": "cpp"
+        "filter3gamma.C": "cpp",
+        "Gauss3Photons.C": "cpp",
+        "shaper_bode.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
